Update for Lisk Core 1.0
Also added % change of price

--- a/src/pages/delegate/delegate.html
+++ b/src/pages/delegate/delegate.html
@@ -27,10 +27,10 @@
       {{ 'UPTIME' | translate }}: {{delegateInfo['productivity']}}%
     </ion-col>
     <ion-col>
-      {{ 'PRODUCED_BLOCKS' | translate }}: {{ delegateInfo['producedblocks'] | number }}
+      {{ 'PRODUCED_BLOCKS' | translate }}: {{ delegateInfo['producedBlocks'] | number }}
     </ion-col>
     <ion-col>
-      {{ 'MISSED_BLOCKS' | translate }}: {{ delegateInfo['missedblocks'] | number }}
+      {{ 'MISSED_BLOCKS' | translate }}: {{ delegateInfo['missedBlocks'] | number }}
     </ion-col>
   </ion-row>
 </ion-grid>
