--- a/src/pages/guest-login/guest-login.html
+++ b/src/pages/guest-login/guest-login.html
@@ -19,7 +19,7 @@
 				<ion-select item-start name="nodeSelect" id="nodeSelect" [(ngModel)]="nodeSelect" (ionChange)='changeNode()'>
 					<ion-option value="mainnet/">Mainnet</ion-option>
 					<ion-option value="testnet/">Testnet</ion-option>
-					<ion-option value="">Custom</ion-option>
+					<!-- <ion-option value="">Custom</ion-option> -->
 				</ion-select>
 			</ion-item>			
 			<ion-item [class.hide]="hideCustom">
