--- a/src/pages/new-account/new-account.html
+++ b/src/pages/new-account/new-account.html
@@ -35,7 +35,7 @@
       <button ion-button color="secondary" (click)="save()" block>Download</button>
     </ion-col> -->
     <ion-col>
-      <button ion-button id="closeButton" (click)="closeModal()" block>{{ 'DONE' | translate }}</button>
+      <button ion-button id="closeButton" (click)="presentPrompt()" block>{{ 'DONE' | translate }}</button>
     </ion-col>
   </ion-row>
 </ion-content>
